--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=yoodate.db"
   },
+  "TokenKey": "my_unguessable_token_key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
